samples/_failures_safe/1761184506_9e60ef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_94ca9929.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_94ca9929.c:162:5: error: expected expression at end of input
  162 |     for (size_t i = 0; i < count; i++)
      |     ^~~
./samples/SAFE/__tmp_94ca9929.c:162:5: error: expected declaration or statement at end of input
